[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! This is aman Negi.I am your devloper.
+            hello world This is aman Negi..
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
