[imad-console] Updates ui/art.html

--- a/ui/art.html
+++ b/ui/art.html
@@ -1,4 +1,28 @@
 <html>
 <head>
+    <title>ARTICLE-one</title>
 </head>
+<body>
+    <div>
+        
+    </div>
+<hr>
+<h3>
+    Aricle one Aman negi contend
+</h3>
+<div>
+    Augest 10 2017;
+</div>
+ <div>
+    <p>
+     This is the article one which all is written by the mr aman negi and get so much fun to writting this parragraph.       
+    </p>
+    <p>
+     This is the article one which all is written by the mr aman negi and get so much fun to writting this parragraph.   
+    </p>
+    <p>
+        This is the article one which all is written by the mr aman negi and get so much fun to writting this parragraph.
+    </p>
+  </div>
+</body>
 </html>
