--- a/ui/art.html
+++ b/ui/art.html
@@ -2,9 +2,20 @@
 <head>
     <title>ARTICLE-one</title>
     <meta name"viewport" content="width=device-width,initial-scale=1">
+    <style>
+        .contain{
+            max-width:800px;
+            margin:0 auto;
+            color:grey;
+            font-family:sans-serif;
+            padding-top:60px;
+            padding-left:20px;
+            padding-right:20px;
+        }
+    </style>
 </head>
 <body>
-    <div>
+    <div class="contain">
         <a href="/">Home</a>
     </div>
 <hr>
