[imad-console] Updates ui/art.html

--- a/ui/art.html
+++ b/ui/art.html
@@ -16,13 +16,14 @@
 </head>
 <body>
     <div class="contain">
+    <div>    
         <a href="/">Home</a>
     </div>
-<hr>
-<h3>
-    Aricle one Aman negi contend
-</h3>
-<div>
+      <hr>
+    <h3>
+     Aricle one Aman negi contend
+    </h3>
+   <div>
     Augest 10 2017;
 </div>
  <div>
@@ -35,6 +36,7 @@
     <p>
         This is the article one which all is written by the mr aman negi and get so much fun to writting this parragraph.
     </p>
+  </div>
   </div>
 </body>
 </html>
