--- a/ui/art33.html
+++ b/ui/art33.html
@@ -2,8 +2,20 @@
 <head>
     <title>ARTICLE-three</title>
     <meta name"viewport" content="width=device-width,initial-scale=1">
+  <style>
+        .contain{
+            max-width:800px;
+            margin:0 auto;
+            color:grey;
+            font-family:sans-serif;
+            padding-top:60px;
+            padding-left:20px;
+            padding-right:20px;
+        }
+    </style>
 </head>
 <body>
+    <div class="contain">
     <div>
         <a href="/">Home</a>
     </div>
@@ -24,6 +36,7 @@
     <p>
         This is the article three which all is written by the mr aman negi and get so much fun to writting this parragraph.
     </p>
+  </div>
   </div>
 </body>
 </html>
