--- a/ui/art33.html
+++ b/ui/art33.html
@@ -1,19 +1,9 @@
 <html>
 <head>
     <title>ARTICLE-three</title>
-    <meta name"viewport" content="width=device-width,initial-scale=1">
-  <style>
-        .contain{
-            max-width:800px;
-            margin:0 auto;
-            color:grey;
-            font-family:sans-serif;
-            padding-top:60px;
-            padding-left:20px;
-            padding-right:20px;
-        }
-    </style>
-</head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="/ui/style.css" rel="stylesheet" />
+  </head>
 <body>
     <div class="contain">
     <div>
