[imad-console] Updates ui/art.html

--- a/ui/art.html
+++ b/ui/art.html
@@ -1,18 +1,9 @@
 <html>
 <head>
     <title>ARTICLE-one</title>
-    <meta name"viewport" content="width=device-width,initial-scale=1">
-    <style>
-        .contain{
-            max-width:800px;
-            margin:0 auto;
-            color:grey;
-            font-family:sans-serif;
-            padding-top:60px;
-            padding-left:20px;
-            padding-right:20px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="/ui/style.css" rel="stylesheet" />
+    
 </head>
 <body>
     <div class="contain">
