--- a/ui/art2.html
+++ b/ui/art2.html
@@ -1,20 +1,8 @@
 <html>
 <head>
     <title>ARTICLE-two</title>
-    <meta name"viewport" content="width=device-width,initial-scale=1">
-    <style>
-         
-        .contain{
-            max-width:800px;
-            margin:0 auto;
-            color:grey;
-            font-family:sans-serif;
-            padding-top:60px;
-            padding-left:20px;
-            padding-right:20px;
-        }
-    
-    </style>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
     <div class="contain">
